--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
-<<<<<<< HEAD
-    
-=======
->>>>>>> 5effc5e062a649c99cfdf4a631e7a4ac86c1d191
-    <link rel="stylesheet" href="css/styles.css" />
+    <link ref="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1>Hello World</h1>
